--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,14 @@
     "@fullcalendar/angular": "^5.8.0",
     "@fullcalendar/daygrid": "^5.8.0",
     "@fullcalendar/interaction": "^5.8.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-calendar": "^0.28.26",
+    "angularx-flatpickr": "^6.5.2",
+    "bootstrap": "^5.0.2",
+    "date-fns": "^2.22.1",
     "daypilot-pro-angular": "https://npm.daypilot.org/daypilot-pro-angular/trial/2021.2.4990.tar.gz",
+    "flatpickr": "^4.6.9",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
